# tnn-stoxx600-forecasting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  predict.py  pyproject.toml  train.py
.github/workflows/: ci.yml
configs/: config.yaml
data/raw/: stoxx600_raw.csv
scripts/: hyperparameter_search.py  persistence_baseline.py  seed_variance.py  test_download.py
src/: config.py  utils.py
src/data/: downloader.py  preprocessor.py
src/evaluation/: metrics.py
src/features/: sequences.py
src/models/: arima.py  baseline.py  loaders.py  lstm.py  tnn.py
src/training/: trainer.py
tests/: test_arima.py  test_baseline.py  test_loaders.py  test_metrics.py  test_preprocessor.py  test_sequences.py  test_trainer.py  test_utils.py
