[project]
name = "tnn-stoxx600-forecasting"
version = "0.1.0"
description = "Comparing TNN, LSTM, and ARIMA models for STOXX Europe 600 price forecasting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "torch>=2.12.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
